use token to create experiments
